--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,11 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["storage"]
+  "permissions": [
+    "storage",
+    "system.cpu",
+    "system.memory",
+    "system.storage",
+    "system.display"
+  ]
 }
